--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
     <meta charset="utf-8">
-    <title>Insert kremówka 2137</title>
+    <title>INSERT KREMÓWKA 2137</title>
 
     <script src="/javascript/pedo.js"></script>
     <link rel="stylesheet" href="/css/index.css">
