--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
     <img src="/image/hambunger.gif" id="left" alt="papirus winiary">
     <img src="/image/papiez-tanczy.gif" id="left2" alt="hehe papaj tańczy">
     <img src="/image/papaj-cube.gif" id="right" alt="papajus cubeus">
-    <img src="/image/hehe.gif" id="right2" alt="papiez pająk">
+    <img src="/image/hehe.gif" id="right2" alt="papież pająk">
 
     <div id="content">
         <div>W imieniu naszego kraju ogłaszam, że Twój odbyt został spenetrowany przez żółtą mordę.</div>
