--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,7 @@
         <noscript>
             <div style="color:#ff0000">Wykonanie kodu JavaScript jest wyłączone w Twojej przeglądarce.</div>
         </noscript>
-        <%- !update.newRelease ? `<div style="color:#00FF00">Dostępna jest nowa aktualizacja v${update.yourVersion} » v${update.current}</div>` : 'Pamiętaj, że strona powstała w celach humorystycznych.' %>
+        <%- update.newRelease ? `<div style="color:#00FF00">Dostępna jest nowa aktualizacja v${update.yourVersion} » v${update.current}</div>` : 'Pamiętaj, że strona powstała w celach humorystycznych.' %>
         <div>Copyright 2022 &copy; by Sefinek. All Rights Reserved<a href="https://papiez.skiffybot.xyz/video/MCxpz4ZPLsmsJt43cayWSHE9pV5uugCFkAuj4UyfLk8VcBpPbncuug3jCxdwdfBXgwGKQEq3qXp3YcgzXTuSzVABTdyxTAUzw2KM.webm" style="text-decoration:none;color: #ffc9c9">.</a></div>
         <div><a href="https://github.com/sefinek24/papiez-tanczy" target="_blank">https://github.com/sefinek24/papiez-tanczy</a></div>
     </div>
