Zmiana alt tekstu

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
     <h1 style="color:#FFFF00">INSERT KREMÓWKA 2137</h1>
 
     <img src="/image/hambunger.gif" id="left" alt="papirus winiary">
-    <img src="/image/papiez-tanczy.gif" id="left2" alt="hehe papaj tańczy">
+    <img src="/image/papiez-tanczy.gif" id="left2" alt="hehe żółta morda tańczy">
     <img src="/image/papaj-cube.gif" id="right" alt="papajus cubeus">
     <img src="/image/hehe.gif" id="right2" alt="papież pająk">
 
