--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,41 +2,45 @@
 <html lang="pl">
 <head>
     <meta charset="utf-8">
-    <title>INSERT KREMÓWKA 2137</title>
+    <title>SYMULATOR ŁAPANIA KREMÓWEK</title>
 
-    <script src="/javascript/pedo.js"></script>
-    <link rel="stylesheet" href="/css/index.css">
+    <style>
+        body {
+            background-color:#000;
+            color:#FFF;
+            text-align:center
+        }
+        h1 {text-align:center;color:#FFFF00}
+        button {
+            background-color: #5865f2;
+            color: #fff;
+            transition:.2s;
+            border-radius:14px;
+            cursor:pointer;
+            height:30px;
+            width:110px;
+        }
+        button:hover {
+            background-color: #4752c4;
+        }
+        button:active {
+            background-color: #3c45a5;
+        }
+    </style>
 </head>
 <body>
-    <h1 style="color:#FFFF00">INSERT KREMÓWKA 2137</h1>
+    <h1 title="PapajSimulator 2 &copy;">SYMULATOR ŁAPANIA KREMÓWEK</h1>
+    <hr>
+    <img src="https://cdn.discordapp.com/emojis/918163077822836827.webp?size=96" title="Żółta morda" alt=":papiez:" style="margin:12px">
+    <img src="https://cdn.discordapp.com/emojis/917939102823899156.webp?size=96" title="Kremówka" alt=":kremowka:" style="margin:12px">
 
-    <img src="/image/hambunger.gif" id="left" alt="papirus winiary">
-    <img src="/image/papiez-tanczy.gif" id="left2" alt="hehe żółta morda tańczy">
-    <img src="/image/papaj-cube.gif" id="right" alt="papajus cubeus">
-    <img src="/image/hehe.gif" id="right2" alt="papież pająk">
+    <p title="Możliwa głęboka penetracja anusa.">Jesteś gotowy na przygodę? Radzimy zabezpieczyć swój odbyt.</p>
+    <a href="/nya">
+        <button title="Odbyt zabezpieczony!">Jeszcze jak!</button>
+    </a>
 
-    <div id="content">
-        <div>W imieniu naszego kraju ogłaszam, że Twój odbyt został spenetrowany przez żółtą mordę.</div>
-
-        <p>
-            <audio controls autoplay><source src="/sound/music.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio>
-            <audio controls autoplay><source src="/sound/music.mp3" type="audio/mpeg"></audio>
-            <audio controls autoplay><source src="/sound/music.mp3" type="audio/mpeg"></audio>
-        </p>
-
-        <video width="320" height="240" autoplay>
-            <source src="/video/papiez.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-    </div>
-
-    <div id="footer">
-        <noscript>
-            <div style="color:#ff0000">Wykonanie kodu JavaScript jest wyłączone w Twojej przeglądarce.</div>
-        </noscript>
-        <%- update.newRelease ? `<div style="color:#00FF00">Dostępna jest nowa aktualizacja v${update.yourVersion} » v${update.current}</div>` : 'Pamiętaj, że strona powstała w celach humorystycznych.' %>
-        <div>Copyright 2022 &copy; by Sefinek. All Rights Reserved<a href="https://papiez.skiffybot.xyz/video/MCxpz4ZPLsmsJt43cayWSHE9pV5uugCFkAuj4UyfLk8VcBpPbncuug3jCxdwdfBXgwGKQEq3qXp3YcgzXTuSzVABTdyxTAUzw2KM.webm" style="text-decoration:none;color: #ffc9c9">.</a></div>
-        <div><a href="https://github.com/sefinek24/papiez-tanczy" target="_blank">https://github.com/sefinek24/papiez-tanczy</a></div>
+    <div style="padding-top:20px">
+        <img src="/image/anime-szmaciura.png" title="Czy wiesz, że papież był pedofilem?" height="570px" alt="Catgirl">
     </div>
 </body>
 </html>
