--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,7 +40,7 @@
     </a>
 
     <div style="padding-top:20px">
-        <img src="/image/anime-szmaciura.png" title="Czy wiesz, że papież był pedofilem?" height="570px" alt="Catgirl">
+        <img src="/image/anime-szmaciura.png" title="Czy wiesz, że papież był pedofilem?" height="570" alt="Catgirl">
     </div>
 </body>
 </html>
