--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,29 +4,7 @@
     <meta charset="utf-8">
     <title>SYMULATOR ŁAPANIA KREMÓWEK</title>
 
-    <style>
-        body {
-            background-color:#000;
-            color:#FFF;
-            text-align:center
-        }
-        h1 {text-align:center;color:#FFFF00}
-        button {
-            background-color: #5865f2;
-            color: #fff;
-            transition:.2s;
-            border-radius:14px;
-            cursor:pointer;
-            height:30px;
-            width:110px;
-        }
-        button:hover {
-            background-color: #4752c4;
-        }
-        button:active {
-            background-color: #3c45a5;
-        }
-    </style>
+    <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
     <h1 title="PapajSimulator 2 &copy;">SYMULATOR ŁAPANIA KREMÓWEK</h1>
@@ -35,7 +13,7 @@
     <img src="https://cdn.discordapp.com/emojis/917939102823899156.webp?size=96" title="Kremówka" alt=":kremowka:" style="margin:12px">
 
     <p title="Możliwa głęboka penetracja anusa.">Jesteś gotowy na przygodę? Radzimy zabezpieczyć swój odbyt.</p>
-    <a href="/nya">
+    <a href="/kremowka">
         <button title="Odbyt zabezpieczony!">Jeszcze jak!</button>
     </a>
 
