--- a/views/kremowka.ejs
+++ b/views/kremowka.ejs
@@ -5,7 +5,7 @@
     <title>INSERT KREMÓWKA 2137</title>
 
     <script src="/javascript/pedo.js"></script>
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/kremowka.css">
 </head>
 <body>
     <h1 style="color:#FFFF00">INSERT KREMÓWKA 2137</h1>
