--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
 
     <p title="Możliwa głęboka penetracja anusa.">Jesteś gotowy na przygodę? Radzimy zabezpieczyć swój odbyt.</p>
     <a href="/kremowka">
-        <button title="Odbyt zabezpieczony!">Jeszcze jak!</button>
+        <button title="Odbyt zabezpieczony!">Jeszcze jak</button>
     </a>
 
     <div style="padding-top:20px">
