--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,10 +9,12 @@
 <body>
     <h1 title="PapajSimulator 2 &copy;">SYMULATOR ŁAPANIA KREMÓWEK</h1>
     <hr>
-    <img src="https://cdn.discordapp.com/emojis/918163077822836827.webp?size=96" title="Żółta morda" style="margin:12px" alt=":papiez:">
-    <img src="https://cdn.discordapp.com/emojis/917939102823899156.webp?size=96" title="Kremówka" style="margin:12px" alt=":kremowka:">
+    <img src="/image/emoji/papiez.webp" title="Żółta morda" style="margin:12px" alt=":papiez:">
+    <img src="/image/emoji/kremowka.webp" title="Kremówka" style="margin:12px" alt=":kremowka:">
 
-    <p title="Możliwa głęboka penetracja anusa.">Jesteś gotowy na przygodę? Radzimy zabezpieczyć swój odbyt.</p>
+    <p title="Możliwa głęboka penetracja anusa.">
+        Jesteś gotowy na przygodę? Radzimy zabezpieczyć swój odbyt.
+    </p>
     <a href="/kremowka">
         <button title="Odbyt zabezpieczony!">Jeszcze jak</button>
     </a>
