Dodano pare nowych tagów

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,12 +2,14 @@
 <html lang="pl">
 <head>
     <meta charset="utf-8">
-    <title>SYMULATOR ŁAPANIA KREMÓWEK</title>
+    <title>Papież<33</title>
+    <meta name="description" content="Czcij papieża i matkę swą. Najlepsze gry tylko u nas!">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
-    <h1 title="PapajSimulator 2 &copy;">SYMULATOR ŁAPANIA KREMÓWEK</h1>
+    <h1 title="PapajSimulator 2 &copy;">SYMULATOR ŻÓŁTEJ MORDY</h1>
     <hr>
     <img src="/image/emoji/papiez.webp" title="Żółta morda" style="margin:12px" alt=":papiez:">
     <img src="/image/emoji/kremowka.webp" title="Kremówka" style="margin:12px" alt=":kremowka:">
@@ -22,5 +24,8 @@
     <div style="padding-top:20px">
         <img src="/image/anime-szmaciura.png" title="Czy wiesz, że papież był pedofilem?" height="570" alt="Catgirl">
     </div>
+
+    <meta property="og:image" content="https://papiez.skiffybot.xyz/image/favicon.ico">
+    <meta name="theme-color" content="#F6C4A4">
 </body>
 </html>
