--- a/views/kremowka.ejs
+++ b/views/kremowka.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>INSERT KREMÓWKA 2137</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <script src="/javascript/pedo.js"></script>
     <link rel="stylesheet" href="/css/kremowka.css">
