--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
         <img src="/image/anime-szmaciura.png" title="Czy wiesz, że papież był pedofilem?" height="570" alt="Catgirl">
     </div>
 
-    <meta property="og:image" content="https://papiez.skiffybot.xyz/image/favicon.ico">
+    <meta property="og:image" content="https://papiez.skiffybot.xyz/image/papaj-cube.gif">
     <meta name="theme-color" content="#F6C4A4">
 </body>
 </html>
