--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Papież<33</title>
-    <meta name="description" content="Czcij papieża i matkę swą. Najlepsze gry tylko u nas!">
+    <meta name="description" content="Czcij papieża i matkę swą. Najlepsza penetracja tylko u nas!">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="/css/index.css">
