--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,10 +22,10 @@
     </a>
 
     <div style="padding-top:20px">
-        <img src="/image/anime-szmaciura.png" title="Czy wiesz, że papież był pedofilem?" height="570" alt="Catgirl">
+        <img src="/image/anime-szmaciura.png" title="Czy wiesz, że papież był pedofilem?" height="570" alt="Cat girl">
     </div>
 
-    <meta property="og:image" content="https://papiez.skiffybot.xyz/image/papaj-cube.gif">
+    <meta property="og:image" content="https://kremowka.sefinek.fun/image/papaj-cube.gif">
     <meta name="theme-color" content="#F6C4A4">
 </body>
 </html>
