--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,28 +2,24 @@
 <html lang="pl">
 <head>
     <meta charset="utf-8">
-    <title>Papież<33</title>
-    <meta name="description" content="Czcij papieża i matkę swą. Najlepsza penetracja tylko u nas!">
+    <title>Symulator łapania kremówek</title>
+    <meta name="description" content="Czcij papieża i matkę swą. Najlepsza penetracja tylko u nas! Zagraj w grę Symulator łapania kremówek już dziś!">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
-    <h1 title="PapajSimulator 2 &copy;">SYMULATOR ŻÓŁTEJ MORDY</h1>
+    <h1 title="PapajSimulator 2 &copy;">SYMULATOR ŁAPANIA KREMÓWEK</h1>
     <hr>
-    <img src="/image/emoji/papiez.webp" title="Żółta morda" style="margin:12px" alt=":papiez:">
-    <img src="/image/emoji/kremowka.webp" title="Kremówka" style="margin:12px" alt=":kremowka:">
+    <img src="/image/emoji/papiez.webp" title="Żółta morda - Czy wiesz, że Jan Paweł II był pedofilem?" style="margin:12px" alt=":papiez:">
+    <img src="/image/emoji/kremowka.webp" title="Kremówka - Czy wiesz, że Jan Paweł II lubił wpierdalać kremówki?" style="margin:12px" alt=":kremowka:">
 
     <p title="Możliwa głęboka penetracja anusa.">
         Jesteś gotowy na przygodę? Radzimy zabezpieczyć swój odbyt.
     </p>
     <a href="/kremowka">
-        <button title="Odbyt zabezpieczony!">Jeszcze jak</button>
+        <button title="Odbyt przed gwałtem zabezpieczony!">Jeszcze jak</button>
     </a>
-
-    <div style="padding-top:20px">
-        <img src="/image/anime-szmaciura.png" title="Czy wiesz, że papież był pedofilem?" height="570" alt="Cat girl">
-    </div>
 
     <meta property="og:image" content="https://kremowka.sefinek.fun/image/papaj-cube.gif">
     <meta name="theme-color" content="#F6C4A4">
