--- a/views/kremowka.ejs
+++ b/views/kremowka.ejs
@@ -9,7 +9,7 @@
     <script src="/javascript/pedo.js"></script>
 </head>
 <body>
-    <h1 style="color:#FFFF00">INSERT KREMÓWKA 2137</h1>
+    <h1>INSERT KREMÓWKA 2137</h1>
 
     <img src="/image/hambunger.gif" id="left" alt="papirus winiary">
     <img src="/image/papiez-tanczy.gif" id="left2" alt="hehe żółta morda tańczy">
