--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,10 +1,10 @@
 body {
     background-color:#000;
-    color:#FFF;
+    color:#fff;
     text-align:center
 }
 
-h1 {color:#FF0;text-align:center}
+h1 {color:#f8c390;text-align:center}
 
 button {
     background-color:#5865f2;
