--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,11 +15,14 @@
     <img src="/image/emoji/kremowka.webp" title="Kremówka - Czy wiesz, że Jan Paweł II lubił wpierdalać kremówki?" style="margin:12px" alt=":kremowka:">
 
     <p title="Możliwa głęboka penetracja anusa.">
-        Jesteś gotowy na przygodę? Radzimy zabezpieczyć swój odbyt.
+        Gotów na przygodę? Pamiętaj o zabezpieczeniu swojego odbytu, gdyż może on ulec niesamowitej penetracji przez osoby trzecie.<br>
+        Nasz serwis oferuje najlepszy gameplay. Życzymy miłej rozrywki!
     </p>
     <a href="/kremowka">
         <button title="Odbyt przed gwałtem zabezpieczony!">Jeszcze jak</button>
     </a>
+
+    <%- update.newRelease ? `<div style="color:#00FF00;margin-top:32px">Dostępna jest nowa aktualizacja<br>v${update.yourVersion} → v${update.current}</div><p><a href="https://github.com/sefinek24/catch-kremowka">Sprawdź nową wersję</a></p>` : 'Pamiętaj, że strona powstała w celach humorystycznych.' %>
 
     <meta property="og:image" content="https://kremowka.sefinek.fun/image/papaj-cube.gif">
     <meta name="theme-color" content="#F6C4A4">
