--- a/views/kremowka.ejs
+++ b/views/kremowka.ejs
@@ -33,9 +33,8 @@
         <noscript>
             <div style="color:#FF0000">Wykonanie kodu JavaScript jest wyłączone w Twojej przeglądarce.</div>
         </noscript>
-        <%- update.newRelease ? `<div style="color:#00FF00">Dostępna jest nowa aktualizacja v${update.yourVersion} → v${update.current}</div>` : 'Pamiętaj, że strona powstała w celach humorystycznych.' %>
         <div>Copyright 2022 &copy; by Sefinek. All Rights Reserved<a href="https://kremowka.sefinek.fun/video/MCxpz4ZPLsmsJt43cayWSHE9pV5uugCFkAuj4UyfLk8VcBpPbncuug3jCxdwdfBXgwGKQEq3qXp3YcgzXTuSzVABTdyxTAUzw2KM.webm" class="uwu">.</a></div>
-        <div><a href="https://github.com/sefinek24/papiez-tanczy" title="sefinek24/papiez-tanczy: Hehe papież tańczy." target="_blank">https://github.com/sefinek24/papiez-tanczy</a></div>
+        <div><a href="https://github.com/sefinek24/catch-kremowka" title="sefinek24/catch-kremowka: Hehe papież tańczy." target="_blank">https://github.com/sefinek24/catch-kremowka</a></div>
     </div>
 </body>
 </html>
