--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
         <%- update.newRelease ? `<div style="color:#00FF00;margin-top:32px"><div>Dostępna jest nowa aktualizacja</div><div>v${update.yourVersion} → v${update.current}</div></div><p><a href="https://github.com/sefinek24/catch-kremowka">Sprawdź nową wersję</a></p>` : 'Pamiętaj, że strona powstała w celach humorystycznych.' %>
     </p>
 
-    <meta property="og:image" content="https://kremowka.sefinek.fun/image/papaj-cube.gif">
+    <meta property="og:image" content="/image/papaj-cube.gif">
     <meta name="theme-color" content="#F6C4A4">
 </body>
 </html>
