--- a/views/kremowka.ejs
+++ b/views/kremowka.ejs
@@ -33,7 +33,7 @@
         <noscript>
             <div style="color:#FF0000">Wykonanie kodu JavaScript jest wyłączone w Twojej przeglądarce.</div>
         </noscript>
-        <div>Copyright 2022 &copy; by Sefinek. All Rights Reserved<a href="https://kremowka.sefinek.fun/video/MCxpz4ZPLsmsJt43cayWSHE9pV5uugCFkAuj4UyfLk8VcBpPbncuug3jCxdwdfBXgwGKQEq3qXp3YcgzXTuSzVABTdyxTAUzw2KM.webm" class="uwu">.</a></div>
+        <div>Copyright 2022 &copy; by Sefinek. All Rights Reserved<a href="/video/MCxpz4ZPLsmsJt43cayWSHE9pV5uugCFkAuj4UyfLk8VcBpPbncuug3jCxdwdfBXgwGKQEq3qXp3YcgzXTuSzVABTdyxTAUzw2KM.webm" class="uwu">.</a></div>
         <div><a href="https://github.com/sefinek24/catch-kremowka" title="sefinek24/catch-kremowka: Hehe papież tańczy." target="_blank">https://github.com/sefinek24/catch-kremowka</a></div>
     </div>
 </body>
